taskapp/workbench/k8s/local/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: taskapp
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql # 名前解決用のHeadless Service名を指定
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: ghcr.io/gihyodocker/taskapp-mysql:v1.0.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-secret
              mountPath: /var/run/secrets/mysql # secret内のkeyがファイル名になる
              readOnly: true
      volumes:
        - name: mysql-secret
          secret:
            secretName: mysql
  volumeClaimTemplates: # podごとにPersistentVolumeClaimを作成する
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
  namespace: taskapp
spec:
  type: ClusterIP
  selector:
    app: mysql
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
