taskapp/workbench/k8s/local/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
  namespace: taskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      # ② assetsディレクトリをボリュームにコピーするためのInitコンテナ
      containers:
        # ③ サイドカーであるリバースプロキシコンテナを定義
        - name: nginx-web
          image: ghcr.io/gihyodocker/taskapp-nginx-web:v1.0.0
          volumeMounts:
            - name: assets-volume
              mountPath: "/var/www/assets"
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          startupProbe:
            exec:
              command: ["test", "-n", "$(ls -A /var/www/assets)"]
          livenessProbe:
            httpGet:
              path: /assets/bootstrap.min.css
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
        # ④ Webサーバのコンテナを定義
        - name: web
          image: ghcr.io/gihyodocker/taskapp-web:v1.0.0
          ports:
            - containerPort: 8280
          args:
            - "server"
            - "--api-address=http://api:80"
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8280
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8280
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
      # ①-1 Pod内で共有できるボリュームを作成、Podが削除されると中身も完全に消える。
      volumes:
        - name: assets-volume
          emptyDir: {}

---
# ⑤ WebサーバのPodへトラフィックを流すService
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
  namespace: taskapp
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: web
